포스트 수정

--- a/_posts/2022-09-05-c-003.md
+++ b/_posts/2022-09-05-c-003.md
@@ -18,16 +18,18 @@ last_modified_at: 2022-09-05
 
 ## 🦥 Call-by-value VS Call-by-reference
 
-- Call by value는 값에 의한 호출로 매개변수를 통해 인자의 값을 전달받아 사용한다.
-- Call by reference는 참조에 의한 호출로 매개변수가 인자와 같은 주소값을 사용하게 된다.
+- Call by value: 값에 의한 호출로 매개변수를 통해 인자의 값을 전달받아 사용한다.
+- Call by reference: 참조에 의한 호출로 매개변수가 인자와 같은 주소값을 사용하게 된다.
+<br/>
+C언어에서 Call-by-reference는 존재하지 않으며, 모든 함수호출은 Call-by-value로 이루어진다.
 
 ---
 
 ### 무엇이 다른가?
 
-- Call by value를 통한 함수 호출은 매개변수의 값만을 전달받기 때문에, 직접적으로 인자에게 영향을 끼치지 않는다.
+- 값에 의한 함수 호출은 매개변수의 값만을 전달받기 때문에, 직접적으로 인자에게 영향을 끼치지 않는다.
 - 이는 포인터를 사용할 떄에도 마찬가지로 인자의 값을 직접적으로 변경할 수 없다.
-- C언어에서 Call-by-reference는 존재하지 않으며, 모든 함수호출은 Call-by-value로 이루어진다.
+- 참조에 의한 함수 호출은 매개변수가 인자의 주소를 참조했기 때문에, 함수 내에서의 매개 변수 값의 변화가 인자에게 직접 영향을 끼친다.
 
 ---
 
@@ -42,8 +44,9 @@ void func(int n)
 - 위와 같이 값에 의한 함수 호출은 매개변수를 선언하고 인자를 통해 같은 자료형의 값을 전달받게 된다.
 - 이 때, n이라는 변수가 새롭게 생성되어 메모리(스택)의 한 자리를 차지하고, 해당 메모리에 인자의 값이 할당된다.
 - n값이 바뀌어도 실제 인자의 값은 변하지 않는다.
-
+<br/>
 ``` C
+
 void func(int* ptr)
 {
   *ptr += 1;
@@ -52,7 +55,7 @@ void func(int* ptr)
 - 포인터를 사용한다면 해당 포인터가 가리키는 주소의 값을 변경할 수 있다.
 - 그러나 인자의 값을 변경할 수는 없다.
 - 이는 마찬가지로 ptr이라는 매개변수가 새롭게 생성되어, 인자의 값을 같은 포인터 자료형으로 받았을 뿐이기 때문이다.
-
+<br/>
 ``` C++
 
 void func(int& n)
