포스트 수정

--- a/_posts/2022-09-05-c-003.md
+++ b/_posts/2022-09-05-c-003.md
@@ -71,7 +71,7 @@ func(t);
 ```
 - 위의 매개변수는 참조자를 이용한 참조 변수이다. (&는 address연산자가 아닌 참조자로 쓰였다)
 - 참조자는 C언어에는 존재하지 않으며, 메모리 공간을 부르는 별칭(또 다른 이름)과 같은 개념이다.
-- 즉, 매개변수 n을 선언할 때 새롭게 메모리를 할당하지 않고 인자인 t의 주소를 공유하게 되며, n값의 변화와 t값의 변화가 모두 한 메모리 공간에서 진행된다. 
+- 즉, 매개변수 n을 선언할 때 새롭게 메모리를 할당하지 않고 인자인 t의 주소를 공유하게 되며, n값의 변화는 같은 메모리 주소를 사용하는 t값의 변화를 의미한다.
 - 이러한 호출을 Call by reference(참조에 의한 호출)이라 하며, 값을 복사하지 않고 직접 참조하기에 Call-by-value에 비해 빠르고 매개변수를 쓰기 위해 메모리를 사용하지 않는다는 장점이 있다.
 
 ---
