포스트 수정

--- a/_posts/2022-08-28-c-001.md
+++ b/_posts/2022-08-28-c-001.md
@@ -21,6 +21,8 @@ last_modified_at: 2022-08-28
 >Visuasl Studio에서는 버퍼 오버 플로우를 막기 위해, <br>
 >데이터를 저장하는 함수들은 Secure함수를 사용하도록 한다.
 
+사용하고자 한 메모리 공간 외의 다른 메모리를 침범하게 되면 에러가 발생한다. 실제로 버퍼 오버플로우를 이용한 해킹 공격이 많이 발생하였고, 이러한 공격 혹은 프로그래머의 실수로 인한 메모리 침범을 막기 위해 Visual Studio에서는 Secure 함수를 강제한다.
+
 ex) scanf_s, strcpy_s, gets_s, strcat_s 등
 
 ---
@@ -39,3 +41,13 @@ ex) scanf_s, strcpy_s, gets_s, strcat_s 등
 - 뿐만 아니라, 버퍼 사이즈라고 명시한 다른 입력함수에서도 모든 예제에서 sizeof가 아닌 _countof를 인자로 사용하고 있다.
 - 물론 현재 char형의 문자들은 1byte이기 때문에 sizeof와 _countof가 같은 값을 나타내지만, 함수에서 요구하는 정확한 매개변수를 전달하는 것이 혹시 모를 오류를 방지할 수 있다.
 
+---
+
+### Secure 함수를 쓰기 싫다면
+
+- Secure함수는 안정성을 높여주지만 Visual Studio에서만 지원할 뿐, 리눅스나 여타 환경에서는 지원하지 않는다.
+- Secure 함수를 사용하지 않고 싶다면 다음 세 가지 방법 중 하나를 이용하면 된다.
+  - #pragma warning(disable:4996) 코드 삽입
+  - #define_CRT_SECURE_NO_WARNINGS 코드 삽입
+  - Visual Studio 상단의 [디버그] - [(프로젝트 명) 속성] - [구성 속성] - [C/C++] - [전처리기], 전처리기 정의에 입력되어 있는 값 뒤에 ';_CRT_SECURE_NO_WARNINGS' 작성 후 확인
+- 첫 번째, 두 번쨰 방법은 매번 작성해야 하는 번거로움이 있으므로, 속성에서 직접 바꾸는 세 번째 방법이 가장 사용하기 편리하다.
