포스트 수정

--- a/_posts/2022-09-10-c-004.md
+++ b/_posts/2022-09-10-c-004.md
@@ -17,7 +17,7 @@ last_modified_at: 2022-09-10
 ---
 
 ## 🦥 메모리 구조
-![메모리구조.png](../assets/images/posts_img/%EB%A9%94%EB%AA%A8%EB%A6%AC%20%EA%B5%AC%EC%A1%B0.png)
+![메모리구조.png](../assets/images/posts_img/메모리 구조.png)
 <img rsc = "https://user-images.githubusercontent.com/111182977/189475267-7db0a198-1058-4347-b886-6c82df19e841.png">
 - 위 그림과 같이 메모리 공간은 크게 4가지 영역으로 나눌 수 있다.
 - 코드 영역 / 데이터 영역 / 힙 영역 / 스택 영역
