포스트 수정

--- a/_posts/2022-09-10-c-004.md
+++ b/_posts/2022-09-10-c-004.md
@@ -18,7 +18,7 @@ last_modified_at: 2022-09-10
 
 ## 🦥 메모리 구조
 ![메모리구조.png](../assets/images/posts_img/memory.png)
-<img rsc = "https://user-images.githubusercontent.com/111182977/189475615-730616df-e89f-4ad3-94ce-9267c66a80ae.png">
+<img rsc = "../assets/images/posts_img/memory.png">
 - 위 그림과 같이 메모리 공간은 크게 4가지 영역으로 나눌 수 있다.
 - 코드 영역 / 데이터 영역 / 힙 영역 / 스택 영역
 
