--- a/_posts/2022-09-11-c-005.md
+++ b/_posts/2022-09-11-c-005.md
@@ -51,7 +51,7 @@ last_modified_at: 2022-09-11
 
 ## 자료형
 
-### 정수
+### 정수형
 - char(1byte), shore(2byte), int(4byte), long(4byte), long long(8byte)
 - 대표적으로 int를 사용한다.
 - 다른 형태로 선언되어도 계산 중에는 int형으로 형 변환되어 계산된다.
