--- a/_posts/2022-09-11-c-005.md
+++ b/_posts/2022-09-11-c-005.md
@@ -16,14 +16,14 @@ date: 2022-09-11
 last_modified_at: 2022-09-11
 ---
 
-## C언어의 특징
+## 🦥 C언어의 특징
 - 절차지향적 언어
 - 장점: 메모리의 사용량을 줄이고, 컴퓨터와 처리 구조가 유사하여 실행속도가 빠르다.
 - 단점: 유지보수가 어렵고, 코드가 길어지면 다른 언어에 비해 가독성이 매우 떨어진다.
 
 ---
 
-## 프로그램 실행 순서
+## 🦥 프로그램 실행 순서
 - 프로그램 작성
 - 컴파일 실행
 - 링크 실행
@@ -36,7 +36,7 @@ last_modified_at: 2022-09-11
 
 ---
 
-## 함수
+## 🦥 함수
 - 정의 및 선언, 호출, 인자의 전달 단계를 거쳐 사용 가능
 - 출력형태(반환형태), 함수이름, 입력형태로 표시된다.
 - 표준함수: 이미 만들어져 기본적으로 제공되는 함수
@@ -50,7 +50,7 @@ last_modified_at: 2022-09-11
 
 ---
 
-## 자료형
+## 🦥 자료형
 
 ### 정수형
 - char(1byte), shore(2byte), int(4byte), long(4byte), long long(8byte)
@@ -76,7 +76,7 @@ last_modified_at: 2022-09-11
 
 ---
 
-## 상수
+## 🦥 상수
 
 ### 리터럴 상수
 - 값이 변하지 않는 고정된 수
@@ -90,7 +90,7 @@ last_modified_at: 2022-09-11
 
 ---
 
-## 연산자
+## 🦥 연산자
 
 ### 대입 연산자
 - = : 연산자 우측의 값을 좌측의 변수에 대입한다.
@@ -135,7 +135,7 @@ last_modified_at: 2022-09-11
 
 ---
 
-## 형 변환
+## 🦥 형 변환
 
 ### 암시적 형 변환 (자동 형 변환)
 - 대입 연산자 양 측의 자료형이 다를 경우, 좌측을 기준으로 형 변환이 발생한다.
@@ -151,7 +151,7 @@ last_modified_at: 2022-09-11
 
 ---
 
-## 흐름 제어
+## 🦥 흐름 제어
 
 ### 반복문
 - while(조건문){ 반복문 }
@@ -171,7 +171,7 @@ last_modified_at: 2022-09-11
 
 ---
 
-## 포인터
+## 🦥 포인터
 
 - 포인터 변수는 주소값을 저장하는 변수이며, 64비트 시스템에서는 8바이트의 값을 저장한다.
 - 배열의 이름은 배열의 첫 주소를 가리키는 포인터이다.
