--- a/_posts/2022-09-11-c-005.md
+++ b/_posts/2022-09-11-c-005.md
@@ -115,14 +115,14 @@ last_modified_at: 2022-09-11
 - 연산의 결과를 true, false로 반환한다.
 
 ### 논리 연산자
-- &&, || : 논리값을 받아 다시 논리값을 반환한다.
+- &&, \\|\\| : 논리값을 받아 다시 논리값을 반환한다.
 
 ### 콤마 연산자
 - 둘 이상의 변수를 동시에 선언하거나, 둘 이상의 문자를 한 행에 삽입할 때 사용한다.
 - 콤마 연산자는 연산이 아닌 구분을 목적으로 쓰인다.
 
 ### 비트 연산자
-- &, |, ^ : 양 측의 피연산자를 비트 단위로 해당 연산한다.
+- &, \\|, ^ : 양 측의 피연산자를 비트 단위로 해당 연산한다.
 - ~ : 단항 연산자로 피연산자의 비트를 모두 반전시킨다.
 - <<, >> : 피 연산자의 비트 열을 좌측 또는 우측으로 한 칸씩 이동시킨다.
 
