포스트 수정

--- a/_posts/2022-09-10-c-004.md
+++ b/_posts/2022-09-10-c-004.md
@@ -27,7 +27,8 @@ last_modified_at: 2022-09-10
 
 ### 코드 영역
 
-- 실행할 프로그램의 코드가 저장되는 영역이며, 컴파일 타임에 결정되고 중간에 수정할 수 없다.
+- 실행할 프로그램의 코드가 저장되는 영역으로 함수, 제어문, 상수 등이 저장된다.
+- 컴파일 타임에 결정되고 나면 수정할 수 없는 Read-only 영역이다.
 - 텍스트 영역이라고도 부른다.
 
 ---
@@ -36,6 +37,10 @@ last_modified_at: 2022-09-10
 
 - 전역변수와 Static변수(정적 변수)가 저장되는 영역이다.
 - 프로그램의 시작과 동시에 메모리 공간에 할당되며, 프로그램이 끝날 때까지 남아있다.
+- 구체적으로는 나누는 경우에는 초기화된 변수가 저장되는 영역을 Data영역, 초기화되지 않은 변수가 저장되는 영역을 BSS 영역으로 나누기도 한다.
+  - 기본적으로 초기화된 변수는 ROM(Read-only memory)의 Data영역에 저장된다.
+  - 그러나 ROM은 읽기전용으로 런타임 도중 변경되는 값을 적용할 수 없으므로, ROM의 Data영역을 RAM에 복사하여 사용한다.
+  - 초기화되지 않은 변수도 ROM에 저장하고 복사하면 된다고 생각할 수 있지만, 그렇게 되면 ROM의 요구사양이 너무 커지므로 해당 변수들은 RAM에만 저장하며 그 영역을 BSS라고 부른다.
 
 ---
 
