포스트 수정

--- a/_posts/2022-09-17-c-006.md
+++ b/_posts/2022-09-17-c-006.md
@@ -17,8 +17,8 @@ last_modified_at: 2022-09-11
 ---
 
 ## 🦥 입출력 스트림
-> 입력과 출력을 하기 위해 필요한 가상의 연결다리 같은 개념
-> 데이터의 흐름을 나타내며, 키보드와 모니터를 대상으로 하는 표준 입출력 스트림이 존재
+> 입력과 출력을 하기 위해 필요한 가상의 연결다리 같은 개념<br/>
+> 데이터의 흐름을 나타내며, 키보드와 모니터를 대상으로 하는 표준 입출력 스트림이 존재<br/>
 > stdin(표준 입력 스트림) / stdout(표준 출력 스트림) / stderr(표준 에러 스트림)
 
 ---
@@ -88,14 +88,14 @@ if(err != 0)
   - a+ / 읽기, 덧붙여 쓰기 가능
 - 이 중에서 r모드와 r+모드는 파일이 없으면 에러가 나고, 나머지 모드는 파일을 생성하고 동작한다.
 - 6가지 모드 중 사용하고자 하는 것을 골랐으면, 그 뒤에 파일의 형식을 이어 작성해주어야 한다.
-- text파일은 t, binary파일은 b를 붙여주어야 하며, 예시로 올린 코드에서는 "rb"모드를 이용하고 있으므로, 읽기 모드로 binary파일을 연 것이다.  
+- text파일은 t, binary파일은 b를 붙여주어야 하며, 예시로 올린 코드에서는 "rb"모드를 이용하고 있으므로, 읽기 모드로 binary파일을 연 것이다.<br/>
 
 - 파일에 대해서 문자열 입출력을 담당하는 함수는 위의 문자, 문자열 입출력 함수 중 매개변수로 FILE*를 이용해 스트림을 입력받은 함수들만 가능하다.
   - int fputc(int c, FILE* stream);
   - int fgetc(FILE* stream);
   - int fputs(const char* s, FILE* stream)
   - char* fgets(char* s, int n, FILE* stream)
-  - int fflush(FILE* stream)  
+  - int fflush(FILE* stream)<br/>
 
 - 바이너리 데이터의 입출력 함수
   - 출력
@@ -108,6 +108,8 @@ if(err != 0)
 
   - 섞여있는 텍스트와 바이너리 데이터를 입출력 하기 위해서는 fprintf, fscanf 함수를 이용한다.
   - 구조체와 같이 텍스트와 바이너리 데이터가 합쳐져 있는 데이터들은 fread, fwrite를 통해 구조체 변수를 하나의 바이너리 데이터로 인식하고 처리한다.
+
+  ---
 
 ### 파일 위치 지시자
 - 파일의 위치 정보(파일 내에서 어디를 가리키고 있는지에 대해)를 저장하고 있으며, fread, fwrite 등의 동작을 수행하면 그 값이 증가한다.
