--- a/_posts/2022-09-11-c-005.md
+++ b/_posts/2022-09-11-c-005.md
@@ -56,6 +56,7 @@ last_modified_at: 2022-09-11
 - char(1byte), shore(2byte), int(4byte), long(4byte), long long(8byte)
 - 대표적으로 int를 사용한다.
 - 다른 형태로 선언되어도 계산 중에는 int형으로 형 변환되어 계산된다.
+- 가장 앞의 bit를 MSB(Most Significant Bit)라고 하며, 부호를 결정한다.
 - 음의 정수 표현 방식
   - 2의 보수를 취해준다.
   - 2의 보수: 해당 정수의 비트를 반전시킨 후(1의 보수) 1을 더해준다.
