포스트 수정

--- a/_posts/2022-08-29-c-002.md
+++ b/_posts/2022-08-29-c-002.md
@@ -25,7 +25,7 @@ last_modified_at: 2022-08-29
 
 ### 오류 
 
-``` C
+``` c
 while (feof(fp) == 0)
 	{
 		char name[20] = { 0 };
@@ -50,7 +50,7 @@ while (feof(fp) == 0)
 - 따라서 while문의 조건으로 feof(stream) == 0 과 같이 사용하게 되면, 파일의 끝에서 반복문을 원하는 횟수보다 1회 더 실행하게 되는 것이다.
 - 위의 반복문처럼 파일의 끝에 도달할 때까지만 반복문이 실행되길 원한다면,
 
-``` C
+``` c
  while(1)
  {
   ...
@@ -61,5 +61,4 @@ while (feof(fp) == 0)
  }
 ```
 
- 이와 같이 파일을 읽는 함수 아래에 break하는 조건문을 걸어 반복문을 탈출하면 된다.
-
+- 이와 같이 파일을 읽는 함수 아래에 break하는 조건문을 걸어 반복문을 탈출하면 된다.
