포스트 수정

--- a/_posts/2022-09-17-c-006.md
+++ b/_posts/2022-09-17-c-006.md
@@ -105,7 +105,7 @@ if(err != 0)
     - 파일로부터 size크기의 데이터 count개를 buffer에 저장한다.
   - 입력
     - size_t fwrite(const void* buffer, size_t size, size_t count, FILE* stream)
-    - 버퍼로부터 size크기의 데이터 count개를 파일에 저장한다.
+    - buffer로부터 size크기의 데이터 count개를 파일에 저장한다.
   - 두 함수 모두 성공 시 count를, 실패 시 count보다 작은 값을 반환한다.  
 
   - 섞여있는 텍스트와 바이너리 데이터를 입출력 하기 위해서는 fprintf, fscanf 함수를 이용한다.
