포스트 수정

--- a/_posts/2022-09-17-c-006.md
+++ b/_posts/2022-09-17-c-006.md
@@ -1,11 +1,11 @@
 ---
-title: "[C] 문자열 및 파일 입출력 함수와 입출력 스트림"
-excerpt: "스트림, 버퍼, 문자열 및 파일 입출력"
+title: "[C] 입출력 함수와 스트림"
+excerpt: "스트림, 버퍼, 파일 입출력"
 
 categories:
   - C
 tags:
-  - [C, 입출력]
+  - [C, 스트림, 입출력]
 
 permalink: /c/c-6/
 
