--- a/_posts/2022-09-11-c-005.md
+++ b/_posts/2022-09-11-c-005.md
@@ -181,3 +181,37 @@ last_modified_at: 2022-09-11
 - const 키워드가 자료형 좌측에 붙으면 주소에 저장된 값이 상수화된다.
 - const 키워드가 자료형 우측에 붙으면 주소값이 상수화된다.
 - ex) const int* ptr 은 (*ptr)이 상수화, int * const ptr 은 ptr이 상수화
+
+---
+
+## 🦥 구조체
+
+- 사용자 정의 자료형으로 필요에 따라 여러 자료형으로 이루어진 변수들을 묶어서 사용할 수 있다.
+- 구조체의 자료형을 작성할 때마다 앞에 struct를 붙여주는 것이 불편하여 주로 typedef를 이욯해 짧게 대체해서 사용한다.
+
+```c
+typedef struct
+{
+  int x;
+  int y;
+} Point;
+```
+
+- 구조체는 여러 자료형들을 묶어 놓은 사용자 정의 자료형이기 때문에, 사용자의 의도에 따라 그 크기가 매우 커질 수도 있다.
+- 따라서 함수에서 매개변수로 전달 받을 때는 주로 포인터를 이용한다. (값을 변화시키지 않는 경우는 안정성을 위해 const를 붙이는 것이 중요하다)
+
+
+## 🦥 열거형
+
+- 열거형은 서로 연관 있는 이름들을 상수로 선언하는 것으로, 프로그램의 가독성을 높이는 효과가 있다.
+- 열거형도 사용할 때마다 enum을 붙여줘야 하므로 typedef 를 이용해 짧게 사용한다.
+
+```c
+typedef enum color
+{
+  Red = 0, Yellow = 1, Green = 2, Blue = 3, Black = 4
+} Color;
+```
+
+- 위와 같이 열거형을 정의해두면 정의 안에 있는 색들은 상수로도 사용할 수 있게 된다.
+- 값을 명시하지 않으면 0부터 순차적으로 결정되며, 일부 열거형 변수에만 값을 명시하면 그 뒤에 오는 변수는 앞의 변수보다 1만큼 증가된 값으로 결정된다.
